Fixes issue #40 - Update dependencies (#41)