@@ -8,8 +8,8 @@
     <packaging>jar</packaging>
     <name>Running Piranha Embedded with Spring Boot using Virtual Threads</name>
     <properties>
-        <piranha.version>23.1.0</piranha.version>
-        <spring-boot.version>3.0.1</spring-boot.version>
+        <piranha.version>23.5.0</piranha.version>
+        <spring-boot.version>3.1.0</spring-boot.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencyManagement>
@@ -55,7 +55,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <release>19</release>
+                    <release>20</release>
                     <enablePreview>true</enablePreview>
                 </configuration>
             </plugin>
@@ -69,6 +69,14 @@
                         <goals>
                             <goal>repackage</goal>
                         </goals>
+                        <configuration>
+                            <jvmArguments>
+                                --enable-preview --add-modules=jdk.incubator.concurrent
+                            </jvmArguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>default-cli</id>
                         <configuration>
                             <jvmArguments>
                                 --enable-preview --add-modules=jdk.incubator.concurrent
